20/07/2023 Version 1.0 readme update and CFICOT.c CFICOT.h comments