@@ -1,1 +1,2 @@
 20/07/2023 Version 1.0 readme update and CFICOT.c CFICOT.h comments
+21/07/2023 Version 1.1 Pointer editing
